<resources>
    <string name="app_name">PowerGrid</string>
    <string name="title_background_image">Background image for title screen</string>
    <string name="new_text">New</string>
    <string name="continue_text">Continue</string>
    <string name="settings_text">Settings</string>
    <string name="human_players_text">Human Players</string>
    <string name="computer_players_text">Computer Players</string>
    <string name="computer_ai_text">Computer AI Level</string>
    <string name="novice_ai_text">Novice</string>
    <string name="average_ai_text">Average</string>
    <string name="expert_ai_text">Expert</string>
    <string name="map_name_text">Map</string>

    <string name="start_button">Start</string>

    <string name="map_us">USA</string>
    <string name="map_germany">Germany</string>

    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
</resources>
